fix: use absolute /smartpos/ routes for NavLink compatibility